# Agentic_RAG-LangGraph

./: .gitignore  README.md  graph.py  graph_state.py  ingestion.py  main.py  nodes.py  pyproject.toml  requirements.txt
data/: rag_guide.docx
